# django_sentinel

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .pytest.ini  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup_project.sh  setup_uv_env.sh
pydj_auth/: settings.py  urls.py  wsgi.py
pydj_auth/management/commands/: docker_compose.py
pydj_auth/migrations/: 0001_initial.py  __init__.py
pydj_auth/models/: __init__.py  auth.py
pydj_auth/tests/e2e/: test_docker_compose_e2e.py
pydj_auth/tests/unit/: test_docker_compose_unit.py
scripts/: mypy.sh  ruff.sh  setup_project.sh
