[project]
name = "django-sentinel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django==5.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
# Reference to the ruff.toml file for configuration
extend = "ruff.toml"
