[project]
name = "django-sentinel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django==5.2.3",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "gunicorn>=21.2.0",
    "asgiref==3.8.1",
    "cfgv==3.4.0",
    "distlib==0.3.9",
    "django-stubs==5.2.1",
    "django-stubs-ext==5.2.1",
    "filelock==3.18.0",
    "identify==2.6.12",
    "iniconfig==2.1.0",
    "mypy==1.16.1",
    "mypy-extensions==1.1.0",
    "nodeenv==1.9.1",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "pre-commit==4.2.0",
    "pygments==2.19.2",
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "pyyaml==6.0.2",
    "ruff==0.12.1",
    "sqlparse==0.5.3",
    "types-pyyaml==6.0.12.20250516",
    "typing-extensions==4.14.0",
    "virtualenv==20.31.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "django-stubs[compatible-mypy]>=4.2.0",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
]

[tool.ruff]
# Reference to the ruff.toml file for configuration
extend = "ruff.toml"

[tool.pytest.ini_options]
addopts = "-vv --capture=tee-sys"
testpaths = ["pydj_auth/tests"]
